<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<artifactId>employees</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>employees-command</module>
		<module>employees-query</module>
		<module>employees-ui</module>
	</modules>

	<parent>
		<groupId>io.github.bhuwanupadhyay</groupId>
		<artifactId>factory-parent</artifactId>
		<version>1.0.2</version>
	</parent>

	<scm>
		<url>https://github.com/BhuwanUpadhyay/employees</url>
		<connection>scm:git:git://github.com/BhuwanUpadhyay/employees.git
		</connection>
		<developerConnection>
			scm:git:ssh://git@github.com/BhuwanUpadhyay/employees.git
		</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<name>Employees</name>
	<description>Demo Project to Employees.</description>
	<url>https://github.com/BhuwanUpadhyay/employees</url>

	<properties>
		<java.version>14</java.version>
		<maven-compiler-plugin.compilerArgs>
			--enable-preview
		</maven-compiler-plugin.compilerArgs>
	</properties>

	<dependencies>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>1.13.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>postgresql</artifactId>
				<version>1.13.0</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
